# Pipelines

./: README.md  pyproject.toml
pipelines/flux-image/: Dockerfile  dev_script.py  flux-image.py  main.py  pyproject.toml
pipelines/qwen-image/: dev_script.py
pipelines/qwen2.5/: dev_script.py
