[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "anthropic>=0.62.0",
    "diffusers>=0.34.0",
    "google-genai>=1.29.0",
    "instructor>=1.10.0",
    "jinja2>=3.1.6",
    "openai>=1.99.5",
    "protobuf>=6.31.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.11.0",
    "tinydb>=4.8.2",
    "torch>=2.8.0",
    "transformers>=4.55.0",
]
